--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -18,8 +18,8 @@ interface Props {
 
 const { projet, index } = Astro.props;
 
-const isLazy = index >= 2; // 🔥 lazy à partir de la 3ème
-const loadingType = isLazy ? "lazy" : "eager";
+// const isLazy = index >= 2; 
+// const loadingType = isLazy ? "lazy" : "eager";
 
 
 // On tronque la description proprement
@@ -52,7 +52,7 @@ function cldThumbnail(url, width = 720) {
       width={800}
       height={500}
       class="h-full w-full object-cover transition-transform duration-500 group-hover:scale-110"
-      loading={loadingType}
+      loading=lazy
 
     />
     <!-- Badge -->
@@ -81,7 +81,7 @@ function cldThumbnail(url, width = 720) {
             width={40}
             height={40}
             class="w-8 h-8 object-contain transition-transform duration-300 group-hover:scale-110"
-            loading={loadingType}
+            loading=lazy
 
           />
         ))
