--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,7 @@ const isHome = Astro.url.pathname === "/";
         <li><a href="#certifications" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Certifications</a></li>
         <li><a href="#technos" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Technos</a></li>
         <li><a href="#realisations" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Réalisations</a></li>
-        {/* <li><a href="#tarifs" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Tarifs</a></li> */}
+        <li><a href="#reviews" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Avis</a></li>
         <li><a href="#contact" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Contacts</a></li>
         <li><a href="/CV.pdf" target="_blank" rel="noopener noreferrer" class="hover:text-[var(--accent-dark)] font-medium transition-colors">Voir le CV</a></li>
       </ul>
@@ -54,7 +54,7 @@ const isHome = Astro.url.pathname === "/";
         <li><a href="#certifications" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Certifications</a></li>
         <li><a href="#technos" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Technos</a></li>
         <li><a href="#realisations" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Réalisations</a></li>
-        <!-- <li><a href="#tarifs" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Tarifs</a></li> -->
+        <li><a href="#reviews" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Avis</a></li>
         <li><a href="#contact" class="block px-4 py-2 hover:text-[var(--color-accent)] rounded-lg transition-colors">Contacts</a></li>
         <li><a href="/CV.pdf" target="_blank" rel="noopener noreferrer" class="block px-4 py-2 hover:text-[var(--accent-dark)] rounded-lg transition-colors">Voir le CV</a></li>
       </ul>
