--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,3 +1,37 @@
 ---
-Astro.redirect("/projects/page/1");
+import ProjectCard from "@/components/ProjectCard.astro";
+import projects from "@/data/projects.json";
+import "../../styles/global.css";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import Button from "@/components/Button.astro";
+
+const PRIORITY_ORDER = {
+  high: 0,
+  medium: 1,
+  low: 2,
+};
+
+const sortedProjects = [...projects].sort(
+  (a, b) =>
+    (PRIORITY_ORDER[a.priority] ?? 99) - (PRIORITY_ORDER[b.priority] ?? 99)
+);
 ---
+
+<BaseLayout>
+  <section class="px-4 flex justify-center text-center flex-col py-20">
+    <div class="max-w-6xl mx-auto">
+      <h1 class="text-4xl font-bold text-center mb-12">Tous mes projets</h1>
+
+      <div class="grid grid-cols-1 sm:grid-cols-2 gap-10 justify-items-center">
+        {sortedProjects.map((project, index) => (
+            <ProjectCard projet={project} index={index} />
+          ))
+        }
+      </div>
+    </div>
+
+    <div class="mt-12 text-center">
+      <Button href="/" variant="gradient">← Retour à l’accueil</Button>
+    </div>
+  </section>
+</BaseLayout>
